// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configure custom should generate $ignore 1`] = `
[
  ".eslintcache",
  ".eslintrc",
  ".prettierrc",
  "coverage/",
  "foo/bar/",
  "report/",
  "tsconfig.json",
]
`;

exports[`configure custom should generate $ignore 2`] = `
[
  ".eslintcache",
  ".eslintrc",
  ".prettierrc",
  "coverage/",
  "foo/bar/",
  "pnpm-lock.yaml",
  "report/",
  "tsconfig.json",
]
`;

exports[`configure default should generate $ignore 1`] = `
[
  ".eslintcache",
  ".eslintrc",
  ".prettierrc",
  "coverage/",
  "dist/",
  "report/",
  "tsconfig.json",
]
`;

exports[`configure default should generate $ignore 2`] = `
[
  ".eslintcache",
  ".eslintrc",
  ".prettierrc",
  "coverage/",
  "dist/",
  "pnpm-lock.yaml",
  "report/",
  "tsconfig.json",
]
`;
